delete transactions, improve test file readability
