# routes/api.php
@@ -1,6 +1,5 @@
 <?php
 
-use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 /*
@@ -14,9 +13,14 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::get('statistics', [\App\Http\Controllers\StatisticController::class,'index'])
-                ->name('statistics.index');
+Route::get('statistics', '\App\Http\Controllers\TransactionController@index')
+                                                            ->name('statistics.index');
 
-Route::middleware('passport')->resource('transactions', \App\Http\Controllers\TransactionController::class,
-                ['only' => ['index','store','destroy']]
-);
+Route::middleware('passport')->group(function(){
+    Route::get('transactions', '\App\Http\Controllers\TransactionController@index')
+                                                            ->name('transaction.index');
+    Route::post('transactions', '\App\Http\Controllers\TransactionController@store')
+                                                            ->name('transaction.store');
+    Route::delete('transactions', '\App\Http\Controllers\TransactionController@destroy')
+                                                            ->name('transaction.store');
+});
